tests/src/frontend/typechecking/invalid/frozen_lambda_6.sk
mutable class Foo<T>(mutable f: T)
fun no(f: mutable Foo<() -> void>): void {
  freeze(f).f()
}
